# vector-citadel

./: .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  contributing.md  deployment.md  performance.md  roadmap.md  tradeoffs.md
frontend-dashboard/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend-dashboard/src/: App.css  App.tsx  index.css
python-ingestion/: Dockerfile  pyproject.toml
python-ingestion/src/ingestion/: cli.py
rust-core/: Cargo.toml  Dockerfile
rust-core/src/: main.rs  models.rs  routes.rs  services.rs
rust-core/src/models/: metadata.rs  mod.rs  trace.rs  vector.rs
rust-core/src/routes/: health.rs  vectors.rs
rust-core/src/services/: vector.rs
