[package]
name = "vector-citadel-core"
version = "0.1.0"
edition = "2021"
description = "Vector indexing and retrieval infrastructure core"
license = "MIT"

[dependencies]
actix-web = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
hnsw = "0.12"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }